tests/ui/discord-frontend/entity_macro/expected_from.stderr
error: expected `from`
  --> tests/ui/discord-frontend/entity_macro/expected_from.rs:33:5
   |
LL |     expected_from = "twilight_model::channel::Channel",
   |     ^^^^^^^^^^^^^

error: aborting due to 1 previous error

